# MediaPolisher

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init_db.sql  pyproject.toml
.github/workflows/: tests.yml
api_gateway/: Dockerfile  config.py  pyproject.toml
backend/: pyproject.toml
database_service/: Dockerfile  README.md  config.py  crud.py  db_setup.py  main.py  mixins.py  models.py  pyproject.toml  schemas.py
database_service/alembic/: env.py
database_service/alembic/versions/: 00a27b982234_create_initial_tables.py  1491219fbee7_add_feed_table_add_mixins_with_uuid.py
database_service/tests/: conftest.py  test_api.py  test_smoke.py
scripts/: alembic_op.sh  mypy_hook.sh
shared/python/: pyproject.toml
shared/python/shared_libs/models/: __init__.py  database_service.py
