[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "Handles public client requests, authentication, and routing to downstream services."
authors = ["dhdschool <dhdschool@outlook.com>"]
license = "GPL-3.0-only"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

fastapi = ">=0.123.10,<0.124.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

shared-libs = {path = "../shared/python", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
mypy = ">=1.19.0,<2.0.0"
loguru = ">=0.7.3,<0.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
