[project]
name = "media-polisher"
version = "0.1.0"
description = "An attempt at a personalized \"newspaper\" style AI tool that procures professional, curated, high-quality content."
authors = [
    {name = "dhdschool",email = "dhdschool@outlook.com"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.123.10,<0.124.0)"
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
